--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- 광고 -->
+    <!--<string name="banner_ad_unit_id">ca-app-pub-7422694427130568/9960320947</string>-->
+    <string name="banner_ad_unit_id">ca-app-pub-1478183271915956/7906475423</string>
+
     <string name="app_name">오늘은 뭐 먹지?</string>
     <string name="action_settings">Settings</string>
     <string name="random">랜덤선택</string>
