--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- 광고 -->
+    <string name="banner_ad_unit_id">ca-app-pub-1478183271915956/7906475423</string>
+    <!-- 광고 -->
+
     <string name="app_name">What Should I Eat?</string>
     <string name="action_settings">Settings</string>
     <string name="random">random select</string>
