빌드 안되는 문제 해결(string.xml 디폴트에 ko나 en에는 있는 값들이 많이 비어있어서 빌드가 안되던거였음)

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,6 +12,206 @@
     <string name="favoritesDialogDelete">Delete</string>
     <string name="favoritesDialogCancel">Cancel</string>
     <string name="btnShowList">show list</string>
-    <string name="creator">:::: creator ::::</string>
-    <string name="creatorContents">PL: Sungmo Ahn\n\nDeveloper: JiHwan Kang,JungHo Kim,DongHo Yer,\nMyungBean Oh,Sungmo Ahn\n\nPlanner: DongHo Yer\n\nIllustrator: YoungSuk Ahn\n\n</string>
+    <!--<string name="creator">:::: creator ::::</string>-->
+    <!--<string name="creatorContents">PL: Sungmo Ahn\n\nDeveloper: JiHwan Kang,JungHo Kim,DongHo Yer,\nMyungBean Oh,Sungmo Ahn\n\nPlanner: DongHo Yer\n\nIllustrator: YoungSuk Ahn\n\n</string>-->
+
+    <!-- examples -->
+    <string name="q1_solo">solo</string>
+    <string name="q1_couple">couple</string>
+    <string name="q1_friend">friend</string>
+    <string name="q1_colleague">colleague</string>
+    <string name="q1_alien">alien</string>
+    <string name="q1_anybody">anybody</string>
+    <string name="q2_snack">snack</string>
+    <string name="q2_meal">meal</string>
+    <string name="q2_relishes">relishes</string>
+    <string name="q2_tabledhote">tabledhote</string>
+    <string name="q2_teadrink">teadrink</string>
+    <string name="q2_alcohol">alcohol</string>
+    <string name="q2_dessert">dessert</string>
+    <string name="q_anything">anything</string>
+    <string name="q3_cryspy">cryspy</string>
+    <string name="q3_crunchy">crunchy</string>
+    <string name="q3_chewy">chewy</string>
+    <string name="q3_soft">soft</string>
+    <string name="q3_soup">soup</string>
+    <string name="q4_boiled">boiled</string>
+    <string name="q4_fried">fried</string>
+    <string name="q4_oven">oven</string>
+    <string name="q4_charcoal">charcoal</string>
+    <string name="q4_uncooked">uncooked</string>
+    <string name="q4_stirfried">stirfried</string>
+    <string name="q4_streamed">streamed</string>
+    <string name="q5_hot">hot</string>
+    <string name="q5_cold">cold</string>
+    <string name="q5_sweet">sweet</string>
+    <string name="q5_sour">sour</string>
+    <string name="q5_spicy">spicy</string>
+    <string name="q5_light">light</string>
+    <string name="q5_greasy">greasy</string>
+    <string name="q5_fishy">fishy</string>
+    <string name="q5_salty">salty</string>
+
+    <!-- food_names -->
+    <string name="jajangmyeon">Black-bean-sauce noodles</string>
+    <string name="jengbanjajang">Jengbanjajang</string>
+    <string name="ganjajang">Ganjajang</string>
+    <string name="jjambbong">Spicy-seafood-noodle-soup</string>
+    <string name="porkcutlet">Pork Cutlet</string>
+    <string name="spaghetti">Spaghetti</string>
+    <string name="ramen">Ramen</string>
+    <string name="coolnoodle">Cool Noodle</string>
+    <string name="toast">Toast</string>
+    <string name="porkbelly">Pork Belly</string>
+    <string name="jokbal">Pigs Feet</string>
+    <string name="pizza">Pizza</string>
+    <string name="salad">Salad</string>
+    <string name="cake">Cake</string>
+    <string name="muffin">Muffin</string>
+    <string name="siathodduk">Siathodduk</string>
+    <string name="gukbap">Gukbap</string>
+    <string name="guksu">Guksu</string>
+    <string name="shabushabu">Shabu-Shabu</string>
+    <string name="rawfish">Raw fish</string>
+    <string name="gimbap">gimbap</string>
+    <string name="udon">udon</string>
+    <string name="bibimnaengmyeon">bibimnaengmyeon</string>
+    <string name="kalguksu">kalguksu</string>
+    <string name="sujebi">sujebi</string>
+    <string name="jjolmyeon">jjolmyeon</string>
+    <string name="kongguksu">noodles in cold bean soup</string>
+    <string name="tteokbokki">tteokbokki</string>
+    <string name="tteokguk">tteokguk</string>
+    <string name="manduguk">manduguk</string>
+    <string name="odeng">odeng</string>
+    <string name="jeyukdupbap">jeyukdupbap</string>
+    <string name="ojingerdupbap">ojingerdupbap</string>
+    <string name="curry">curry</string>
+    <string name="kimchibokkeumbap">kimchi fried rice</string>
+    <string name="budaejjigae">budaejjigae</string>
+    <string name="yukgaejang">yukgaejang</string>
+    <string name="kalbitang">kalbitang</string>
+    <string name="ttukbaegibulgogi">ttukbaegibulgogi</string>
+    <string name="bibimbap">bibimbap</string>
+    <string name="dolsotbibimbap">dolsotbibimbap</string>
+    <string name="kongnamulgukbap">kongnamulgukbap</string>
+    <string name="sunjihaejangguk">sunjihaejangguk</string>
+    <string name="bossam">bossam</string>
+    <string name="samhap">samhap</string>
+    <string name="jeonbokjuk">jeonbokjuk</string>
+    <string name="hobakjuk">hobakjuk</string>
+    <string name="danpatjuk">danpatjuk</string>
+    <string name="bibimguksu">bibimguksu</string>
+    <string name="jaengbanguksu">jaengbanguksu</string>
+    <string name="makguksu">makguksu</string>
+    <string name="gamjatang">gamjatang</string>
+    <string name="gomtang">gomtang</string>
+    <string name="doenjangguk">doenjangguk</string>
+    <string name="tteokmandutguk">tteokmandutguk</string>
+    <string name="maeuntang">maeuntang</string>
+    <string name="miyeokguk">miyeokguk</string>
+    <string name="bugeotguk">bugeotguk</string>
+    <string name="samgyetang">samgyetang</string>
+    <string name="seolleongtang">seolleongtang</string>
+    <string name="ugeojigalbitang">ugeojigalbitang</string>
+    <string name="haemultang">haemultang</string>
+    <string name="kimchijjigae">kimchijjigae</string>
+    <string name="doenjangjjigae">doenjangjjigae</string>
+    <string name="sundubujjigae">sundubujjigae</string>
+    <string name="cheonggukjang">cheonggukjang</string>
+    <string name="gopchangjeongol">gopchangjeongol</string>
+    <string name="gopchanggui">gopchanggui</string>
+    <string name="dubujeongol">dubujeongol</string>
+    <string name="mandujeongol">mandujeongol</string>
+    <string name="bullakjeongol">bullakjeongol</string>
+    <string name="sinseollo">sinseollo</string>
+    <string name="galbijjim">galbijjim</string>
+    <string name="dakmaeunjjim">dakmaeunjjim</string>
+    <string name="suyuk">suyuk</string>
+    <string name="agwijjim">agwijjim</string>
+    <string name="haemuljjim">haemuljjim</string>
+    <string name="dotorimuk">dotorimuk</string>
+    <string name="japchae">japchae</string>
+    <string name="japchaebap">japchaebap</string>
+    <string name="tangpyeongchae">tangpyeongchae</string>
+    <string name="haeparinaengchae">haeparinaengchae</string>
+    <string name="galchijorim">galchijorim</string>
+    <string name="godeungeojorim">godeungeojorim</string>
+    <string name="dubujorim">dubujorim</string>
+    <string name="eundaegujorim">eundaegujorim</string>
+    <string name="nakjibokkeum">nakjibokkeum</string>
+    <string name="dubukimchi">dubukimchi</string>
+    <string name="deodeokgui">deodeokgui</string>
+    <string name="dwaejigalbi">dwaejigalbi</string>
+    <string name="tteokgalbi">tteokgalbi</string>
+    <string name="roseupyeonchae">roseupyeonchae</string>
+    <string name="origui">origui</string>
+    <string name="dakgalbi">dakgalbi</string>
+    <string name="saengseongui">saengseongui</string>
+    <string name="gamjajeon">gamjajeon</string>
+    <string name="gyeranmari">gyeranmari</string>
+    <string name="kimchijeon">kimchijeon</string>
+    <string name="modeumjeon">modeumjeon</string>
+    <string name="bindaetteok">bindaetteok</string>
+    <string name="pajeon">pajeon</string>
+    <string name="haemulpajeon">haemulpajeon</string>
+    <string name="yukhoe">yukhoe</string>
+    <string name="hongeohoemuchim">hongeohoemuchim</string>
+    <string name="ganjanggejang">ganjanggejang</string>
+    <string name="yangnyumgejang">yangnyumgejang</string>
+    <string name="gyeongdan">gyeongdan</string>
+    <string name="kkultteok">kkultteok</string>
+    <string name="baekseolgi">baekseolgi</string>
+    <string name="yaksik">yaksik</string>
+    <string name="hwajeon">hwajeon</string>
+    <string name="gangjeong">gangjeong</string>
+    <string name="dasik">dasik</string>
+    <string name="yakgwa">yakgwa</string>
+    <string name="dakgangjeong">dakgangjeong</string>
+    <string name="nokcha">nokcha</string>
+    <string name="maesilcha">maesilcha</string>
+    <string name="sujeonggwa">sujeonggwa</string>
+    <string name="sikhye">sikhye</string>
+    <string name="omijahwachae">omijahwachae</string>
+    <string name="yujacha">yujacha</string>
+    <string name="insamcha">insamcha</string>
+    <string name="hanjeongsik">hanjeongsik</string>
+    <string name="yeongyangdolsotbap">yeongyangdolsotbap</string>
+    <string name="jatjuk">jatjuk</string>
+    <string name="heugimjajuk">heugimjajuk</string>
+    <string name="yachaegopchang">yachaegopchang</string>
+    <string name="sundaegopchang">sundaegopchang</string>
+    <string name="baeksundae">baeksundae</string>
+    <string name="guksujeongol">guksujeongol</string>
+    <string name="jjimdak">jjimdak</string>
+    <string name="nengchaejokbal">nengchaejokbal</string>
+    <string name="gujeolpan">gujeolpan</string>
+    <string name="oiseon">oiseon</string>
+    <string name="gungjungtopokki">gungjungtopokki</string>
+    <string name="sogalbi">sogalbi</string>
+    <string name="hwangtaegui">hwangtaegui</string>
+    <string name="bossamkimchi">bossamkimchi</string>
+    <string name="broiledeel">broiledeel</string>
+    <string name="bulgogi">bulgogi</string>
+    <string name="hobaknipssam">hobaknipssam</string>
+    <string name="bersertang">bersertang</string>
+    <string name="tangsuyuk">tangsuyuk</string>
+    <string name="friedshrimp">friedshrimp</string>
+    <string name="hamburger">hamburger</string>
+    <string name="geranjjim">geranjjim</string>
+    <string name="frenchfries">frenchfries</string>
+    <string name="barbecuechicken">barbecuechicken</string>
+    <string name="ggochijun">ggochijun</string>
+    <string name="dongtaijun">dongtaijun</string>
+    <string name="donggrangddeng">donggrangddeng</string>
+
+    <!-- questions -->
+    <string name="question_1">1.Who do you eat with?</string>
+    <string name="question_2">2.Dining options</string>
+    <string name="question_3">3.What texture?</string>
+    <string name="question_4">4.what recipes?</string>
+    <string name="question_5">5.Temperature of food</string>
+    <string name="question_6">6.What flavor do you want?</string>
+    <string name="question_result">*.What about the foods?</string>
+
 </resources>
