--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -220,5 +220,6 @@
     <string name="question_result">*.이 음식들 어떠세요?</string>
     <string name="activity_main_tab_2_favorites">즐겨찾기</string>
     <string name="activity_main_tab_1_select">음식 선택하기</string>
+    <string name="alert_back_btn_exit">\&apos;뒤로\&apos; 버튼을 한번 더 누르시면 종료됩니다</string>
 
 </resources>
