음식추가 - 안동찜닭

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -209,6 +209,7 @@
     <string name="ggochijun">ggochijun</string>
     <string name="dongtaijun">dongtaijun</string>
     <string name="donggrangddeng">donggrangddeng</string>
+    <string name="andongjjimdak">andongjjimdak</string>
 
     <!-- questions -->
     <string name="question_1">1.Who do you eat with?</string>
