--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -209,6 +209,7 @@
     <string name="ggochijun">꼬치전</string>
     <string name="dongtaijun">동태전</string>
     <string name="donggrangddeng">동그랑땡</string>
+    <string name="andongjjimdak">안동찜닭</string>
 
     <!-- questions -->
     <string name="question_1">1.누구와 먹나요?</string>
