--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -20,6 +20,18 @@
     <!--<string name="creator">:::: 제작자 ::::</string>-->
     <!--<string name="creatorContents">PL: 안성모\n\n개발: 강지환,김정호,여동호,\n오명빈,안성모\n\n기획: 여동호\n\n일러스트레이터: 안영숙\n\n</string>-->
 
+    <!-- questions -->
+    <string name="question_1">1.누구와 먹나요?</string>
+    <string name="question_2">2.식사 타입</string>
+    <string name="question_3">3.어떤 식감을 원하나요?</string>
+    <string name="question_4">4.조리 스타일</string>
+    <string name="question_5">5.음식의 온도는?</string>
+    <string name="question_6">6.어떤 맛을 원하나요?</string>
+    <string name="question_result">*.이 음식들 어떠세요?</string>
+    <string name="activity_main_tab_2_favorites">즐겨찾기</string>
+    <string name="activity_main_tab_1_select">음식 선택하기</string>
+    <string name="alert_back_btn_exit">\&apos;뒤로\&apos; 버튼을 한번 더 누르시면 종료됩니다</string>
+
     <!-- examples -->
     <string name="q1_solo">혼자</string>
     <string name="q1_couple">이성</string>
@@ -210,17 +222,5 @@
     <string name="dongtaijun">동태전</string>
     <string name="donggrangddeng">동그랑땡</string>
     <string name="andongjjimdak">안동찜닭</string>
-
-    <!-- questions -->
-    <string name="question_1">1.누구와 먹나요?</string>
-    <string name="question_2">2.식사 타입</string>
-    <string name="question_3">3.어떤 식감을 원하나요?</string>
-    <string name="question_4">4.조리 스타일</string>
-    <string name="question_5">5.음식의 온도는?</string>
-    <string name="question_6">6.어떤 맛을 원하나요?</string>
-    <string name="question_result">*.이 음식들 어떠세요?</string>
-    <string name="activity_main_tab_2_favorites">즐겨찾기</string>
-    <string name="activity_main_tab_1_select">음식 선택하기</string>
-    <string name="alert_back_btn_exit">\&apos;뒤로\&apos; 버튼을 한번 더 누르시면 종료됩니다</string>
-
+    <string name="jogejjim">조개찜</string>
 </resources>
