음식추가 - 마라탕

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -223,4 +223,5 @@
     <string name="donggrangddeng">동그랑땡</string>
     <string name="andongjjimdak">안동찜닭</string>
     <string name="jogejjim">조개찜</string>
+    <string name="malatang">마라탕</string>
 </resources>
