--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -223,4 +223,5 @@
     <string name="donggrangddeng">donggrangddeng</string>
     <string name="andongjjimdak">andongjjimdak</string>
     <string name="jogejjim">Steamed Assorted Clam</string>
+    <string name="malatang">malatang</string>
 </resources>
